Fixed link to intro.

--- a/views/intro_inner.html
+++ b/views/intro_inner.html
@@ -101,10 +101,10 @@
 								</a>
               </div>
               <div class="n-item n-now">
-                <div>
+                <a href="intro.html">
                   <span class="n-tc">學生會簡介</span>
                   <span class="n-eng">INTRO</span>
-                </div>
+                </a>
                 <div class="n-list">
                   <div class="n-l-item"><a href="intro_inner.html#it-label-0">會長/副會長</a></div>
                   <div class="n-l-item"><a href="intro_inner.html#it-label-1">資訊部</a></div>
